# kelo_tulip

./: CMakeLists.txt  README.md  comments.md  package.xml
config/: example.yaml
include/kelo_tulip/: EtherCATMaster.h  EtherCATModule.h  EtherCATModuleROS.h  KeloDriveAPI.h  PlatformDriver.h  PlatformDriverROS.h  Structs.h  Utils.h  VelocityPlatformController.h  VelocityPlatformControllerWithAcceleration.h  WheelConfig.h  WheelModel.h
include/kelo_tulip/modules/: RobileMasterBattery.h  RobileMasterBatteryROS.h
include/kelo_tulip/soem/: ethercatmain.h  ethercattype.h
launch/: example.launch  example_joypad.launch
msg/: KeloDriveInput.msg  KeloDrivesInput.msg
src/: EtherCATMaster.cpp  EtherCATModule.cpp  EtherCATModuleROS.cpp  PlatformDriver.cpp  PlatformDriverROS.cpp  TulipMain.cpp  Utils.cpp  VelocityPlatformController.cpp  VelocityPlatformControllerWithAcceleration.cpp
src/modules/: RobileMasterBattery.cpp  RobileMasterBatteryROS.cpp
src/soem/: CMakeLists.txt  ethercatconfig.c  firm_update.c
